--- a/composer.json
+++ b/composer.json
@@ -14,9 +14,9 @@
         "laravel/fortify": "^1.30",
         "laravel/framework": "^12.0",
         "laravel/tinker": "^2.10.1",
-        "livewire/flux": "^2.10",
+        "livewire/flux": "^2.11",
         "livewire/livewire": "^4.0",
-        "livewire/volt": "^1.10",
+        "phpseclib/phpseclib": "^3.0",
         "spatie/laravel-multitenancy": "^4.0",
         "spatie/laravel-permission": "^6.24"
     },
